# admet

./: analyse_data.ipynb  example_train.py  gnn_experiment.ipynb  hello.py  pyproject.toml  utils.py
modules/: data_setup.py  gnn_model.py  model.py  trainer.py  utils.py
modules/data/: augmentation.py  config.py  conversion.py  dataset.py  features.py
results/run_20250228_015813/: args.json
results/run_20250228_021836/: args.json
